fixed whitespace footer in mobile version in main page

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,7 @@
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
+	overflow: hidden;
 }
 
 .link {
